create and list product routes
